facebook, twitter auth working

--- a/app/views/authentications/index.html.erb
+++ b/app/views/authentications/index.html.erb
@@ -1,16 +1,20 @@
-<% title "Authentications" %>
+<h2>Authentications</h2>
 
 <table>
   <tr>
     <th>User</th>
     <th>Provider</th>
     <th>Uid</th>
+    <th>UEmail</th>
+    <th>UName</th>
   </tr>
   <% for authentication in @authentications %>
     <tr>
       <td><%= authentication.user_id %></td>
       <td><%= authentication.provider %></td>
       <td><%= authentication.uid %></td>
+      <td><%= authentication.uemail %></td>
+      <td><%= authentication.uname %></td>
       <td><%= link_to "Destroy", authentication, :confirm => 'Are you sure?', :method => :delete %></td>
     </tr>
   <% end %>
