--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,12 @@
 
 <header>
-  <% logo = image_tag("logo.png", :alt => "Sample App", :class => "round") %>
+  <% logo = image_tag("logo.jpg", :size => "152x128", :alt => "Sample App", :class => "round") %>
   <%= link_to logo, root_path %>
   <nav class="round">
     <ul>
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "Help", help_path %></li>
+      <li><%= link_to "Authentications", authentications_path %></li>
       <li><%= render 'pages/user_nav'%></li>
     </ul>
   </nav>
