api_key table added

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,14 +1,7 @@
 
-<footer>
-  <nav class="round">
-    <ul>
-    	</b>
     	<% if user_signed_in? %>
-				<li>Signed in as <%= current_user.email %></li>
+				<p>Signed in as <%= current_user.email %></p>
 			<% end %>
-      <li><%= link_to "About", about_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
-      <li><a href="http://ekaidepd.com/"></a></li>     
-    </ul>
-  </nav>
-</footer>
+      <p><%= link_to "About", about_path, class: "btn-link" %></p>
+      <p><%= link_to "Contact", contact_path, class: "btn-link"  %></p>
+      <p>&copy; SocialTour 2013</p>     
