--- a/app/views/cities/_form.html.erb
+++ b/app/views/cities/_form.html.erb
@@ -2,15 +2,10 @@
   <div class="control-group">
     <%= f.label :name, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :name, :class => 'text_field' %>
+      <%= f.country_select :name, [],{:selected => "Spain"}, :class => 'text_field' %>
     </div>
   </div>
-  <div class="control-group">
-    <%= f.label :country_id, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.number_field :country_id, :class => 'number_field' %>
-    </div>
-  </div>
+
 
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
