--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -8,6 +8,20 @@
   <dd><%= @city.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:country_id) %>:</strong></dt>
   <dd><%= @city.country_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:minube_id) %>:</strong></dt>
+  <dd><%= @city.minube_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:slug) %>:</strong></dt>
+  <dd><%= @city.slug %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:image_file_name) %>:</strong></dt>
+  <dd><%= @city.image_file_name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:image_content_type) %>:</strong></dt>
+  <dd><%= @city.image_content_type %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:image_file_size) %>:</strong></dt>
+  <dd><%= @city.image_file_size %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:image_upload_at) %>:</strong></dt>
+  <dd><%= @city.image_upload_at %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:name_eu) %>:</strong></dt>
+  <dd><%= @city.name_eu %></dd>
 </dl>
 
 <div class="form-actions">
