--- a/app/views/pois/index.html.erb
+++ b/app/views/pois/index.html.erb
@@ -28,7 +28,7 @@
     <th></th>
   </tr>
 
-<% @pois.each do |poi| %>
+<% @what_to_do.each do |poi| %>
   <tr>
     <td><%= poi.name %></td>
     <td><%= poi.description %></td>
