--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,35 +1,31 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Category -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Name:</b>
-  <%= @category.name %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
+  <dd><%= @category.name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:supercategory_id) %>:</strong></dt>
+  <dd><%= @category.supercategory_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:group) %>:</strong></dt>
+  <dd><%= @category.group %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:slug) %>:</strong></dt>
+  <dd><%= @category.slug %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:is_route) %>:</strong></dt>
+  <dd><%= @category.is_route %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
+  <dd><%= @category.description %></dd>
+</dl>
 
-<p>
-  <b>Supercategory:</b>
-  <%= @category.supercategory %>
-</p>
-
-<p>
-  <b>Group:</b>
-  <%= @category.group %>
-</p>
-
-<p>
-  <b>Slug:</b>
-  <%= @category.slug %>
-</p>
-
-<p>
-  <b>Is route:</b>
-  <%= @category.is_route %>
-</p>
-
-<p>
-  <b>Description:</b>
-  <%= @category.description %>
-</p>
-
-
-<%= link_to 'Edit', edit_category_path(@category) %> |
-<%= link_to 'Back', categories_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              categories_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_category_path(@category), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              category_path(@category),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
