--- a/app/views/cities/_form.html.erb
+++ b/app/views/cities/_form.html.erb
@@ -2,10 +2,52 @@
   <div class="control-group">
     <%= f.label :name, :class => 'control-label' %>
     <div class="controls">
-      <%= f.country_select :name, [],{:selected => "Spain"}, :class => 'text_field' %>
+      <%= f.text_field :name, :class => 'text_field' %>
     </div>
   </div>
-
+  <div class="control-group">
+    <%= f.label :country_id, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.number_field :country_id, :class => 'number_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :minube_id, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.number_field :minube_id, :class => 'number_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :slug, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :slug, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :image_file_name, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :image_file_name, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :image_content_type, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :image_content_type, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :image_file_size, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.number_field :image_file_size, :class => 'number_field' %>
+    </div>
+  </div>
+  
+  <div class="control-group">
+    <%= f.label :name_eu, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :name_eu, :class => 'text_field' %>
+    </div>
+  </div>
 
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
