--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,4 +1,4 @@
-<%- model_class = Category -%>
+<%- model_class = Country -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
 </div>
@@ -6,32 +6,28 @@
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:minube_id) %></th>
       <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%= model_class.human_attribute_name(:supercategory_id) %></th>
-      <th><%= model_class.human_attribute_name(:group) %></th>
-      <th><%= model_class.human_attribute_name(:slug) %></th>
-      <th><%= model_class.human_attribute_name(:is_route) %></th>
-      <th><%= model_class.human_attribute_name(:description) %></th>
+      <th><%= model_class.human_attribute_name(:latitude) %></th>
+      <th><%= model_class.human_attribute_name(:longitude) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
-    <% @categories.each do |category| %>
+    <% @countries.each do |country| %>
       <tr>
-        <td><%= link_to category.id, category_path(category) %></td>
-        <td><%= category.name %></td>
-        <td><%= category.supercategory_id %></td>
-        <td><%= category.group %></td>
-        <td><%= category.slug %></td>
-        <td><%= category.is_route %></td>
-        <td><%= category.description %></td>
-        <td><%=l category.created_at %></td>
+        <td><%= link_to country.id, country_path(country) %></td>
+        <td><%= country.minube_id %></td>
+        <td><%= country.name %></td>
+        <td><%= country.latitude %></td>
+        <td><%= country.longitude %></td>
+        <td><%= country.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_category_path(category), :class => 'btn btn-mini' %>
+                      edit_country_path(country), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      category_path(category),
+                      country_path(country),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
@@ -42,5 +38,5 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_category_path,
+            new_country_path,
             :class => 'btn btn-primary' %>
