--- a/app/views/supercategories/index.html.erb
+++ b/app/views/supercategories/index.html.erb
@@ -1,33 +1,46 @@
-<h1>Listing supercategories</h1>
-
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Slug</th>
-    <th>Icon file name</th>
-    <th>Icon content type</th>
-    <th>Icon file size</th>
-    <th>Icon update at</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @supercategories.each do |supercategory| %>
-  <tr>
-    <td><%= supercategory.name %></td>
-    <td><%= supercategory.slug %></td>
-    <td><%= supercategory.icon_file_name %></td>
-    <td><%= supercategory.icon_content_type %></td>
-    <td><%= supercategory.icon_file_size %></td>
-    <td><%= supercategory.icon_update_at %></td>
-    <td><%= link_to 'Show', supercategory %></td>
-    <td><%= link_to 'Edit', edit_supercategory_path(supercategory) %></td>
-    <td><%= link_to 'Destroy', supercategory, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+<%- model_class = Supercategory -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:name) %></th>
+      <th><%= model_class.human_attribute_name(:slug) %></th>
+      <th><%= model_class.human_attribute_name(:icon_file_name) %></th>
+      <th><%= model_class.human_attribute_name(:icon_content_type) %></th>
+      <th><%= model_class.human_attribute_name(:icon_file_size) %></th>
+      <th><%= model_class.human_attribute_name(:icon_update_at) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @supercategories.each do |supercategory| %>
+      <tr>
+        <td><%= link_to supercategory.id, supercategory_path(supercategory) %></td>
+        <td><%= supercategory.name %></td>
+        <td><%= supercategory.slug %></td>
+        <td><%= supercategory.icon_file_name %></td>
+        <td><%= supercategory.icon_content_type %></td>
+        <td><%= supercategory.icon_file_size %></td>
+        <td><%= supercategory.icon_update_at %></td>
+        <td><%=l supercategory.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_supercategory_path(supercategory), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      supercategory_path(supercategory),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
 
-<br />
-
-<%= link_to 'New Supercategory', new_supercategory_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_supercategory_path,
+            :class => 'btn btn-primary' %>
