--- a/app/views/supercategories/show.html.erb
+++ b/app/views/supercategories/show.html.erb
@@ -1,35 +1,31 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Supercategory -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Name:</b>
-  <%= @supercategory.name %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
+  <dd><%= @supercategory.name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:slug) %>:</strong></dt>
+  <dd><%= @supercategory.slug %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:icon_file_name) %>:</strong></dt>
+  <dd><%= @supercategory.icon_file_name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:icon_content_type) %>:</strong></dt>
+  <dd><%= @supercategory.icon_content_type %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:icon_file_size) %>:</strong></dt>
+  <dd><%= @supercategory.icon_file_size %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:icon_update_at) %>:</strong></dt>
+  <dd><%= @supercategory.icon_update_at %></dd>
+</dl>
 
-<p>
-  <b>Slug:</b>
-  <%= @supercategory.slug %>
-</p>
-
-<p>
-  <b>Icon file name:</b>
-  <%= @supercategory.icon_file_name %>
-</p>
-
-<p>
-  <b>Icon content type:</b>
-  <%= @supercategory.icon_content_type %>
-</p>
-
-<p>
-  <b>Icon file size:</b>
-  <%= @supercategory.icon_file_size %>
-</p>
-
-<p>
-  <b>Icon update at:</b>
-  <%= @supercategory.icon_update_at %>
-</p>
-
-
-<%= link_to 'Edit', edit_supercategory_path(@supercategory) %> |
-<%= link_to 'Back', supercategories_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              supercategories_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_supercategory_path(@supercategory), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              supercategory_path(@supercategory),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
