--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -91,6 +91,31 @@
 		    <%= javascript_include_tag "near-pois" %>
 		    
 		    <a href="#map-canvas" class="map-expand"><center>&darr;</center></a>
+		    <script>
+      var mapExpanded = false;
+      $("a.map-expand").click(function() {
+        $('#map-canvas').animate({
+          height: mapExpanded ? 300 : 600
+        }, {
+        	duration: 300,
+        	easing: "swing",
+        	complete: function(){
+        	  google.maps.event.trigger(map, "resize");
+        	  $("a.map-expand > center").text(mapExpanded ? '↑' : '↓');
+        	}
+        });
+        
+        $("html, body").animate({
+      		scrollTop: $($(this).attr("href")).offset().top + "px"
+      	}, {
+      		duration: 300,
+      		easing: "swing"
+      	});
+
+        mapExpanded = !mapExpanded;
+        return false;
+      });
+    </script>
 		    
 		</div>
 	</div>
