login dropdown added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,17 +43,38 @@
             <div class="navbar pull-right">
 		          <%= link_to "eu", "?locale=eu", class: session[:locale] == 'eu' ? 'language-selected' : '' %>
 		          | 
-		          <%= link_to "es", "?locale=es", class: session[:locale] == 'es' ? 'language-selected' : '' %>&nbsp;&nbsp;&nbsp;&nbsp;
-		          
+		          <%= link_to "es", "?locale=es", class: session[:locale] == 'es' ? 'language-selected' : '' %>
+		        </div>
+		        	
 		        	<% if user_signed_in? %>
+		        	<div class="pull-right">
 		        		Logged as
-		          	<%= link_to "#{current_user.name}", current_user %>
-		          <% end %>
-        		</div>
+		          	<%= link_to "#{current_user.name}", current_user %>&nbsp;&nbsp;&nbsp;&nbsp;
+		          </div>
+		          <% else %>
+		          
+		          	<ul class="nav pull-right span2">              		
+	              		<li class="dropdown">
+	                	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Sign in <b class="caret"></b></a>
+	                	<ul class="dropdown-menu">
+		                  <%= render 'users/sessions/login'%>
+		                  <li class="divider"></li>
+		                  <li class="nav-header"><Nav header><%= t('authentications')%></li>
+		                  <li><a href="/auth/twitter" class="auth_provider">Twitter <%= image_tag "twitter_64.png", :size => "18x18", :alt => "Twitter" %></a></li>
+											  											
+											<li><a href="/auth/facebook" class="auth_provider">Facebook <%= image_tag "facebook_64.png", :size => "18x18", :alt => "Facebook" %></a></li>
+											  
+											<li><a href="/auth/google_oauth2" class="auth_provider">Google <%= image_tag "google_64.png", :size => "18x18", :alt => "Google" %> </a></li>
+											
+											<li><a href="/auth/foursquare" class="auth_provider"> Foursquare <%= image_tag "foursquare_64.png", :size => "18x18", :alt => "Forsquare" %></a></li>
+                		</ul>
+              			</li>
+            			</ul>
+            			
+		          <% end %> 
         		
         		<form class="navbar-form form-search pull-right span3">
-  							<input type="text" class="input-medium search-query">
-  							
+  							<input type="text" class="input-medium search-query">	
 						</form>
             
           </div><!--/.nav-collapse -->
