--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -26,7 +26,7 @@
         <td><%= category.slug %></td>
         <td><%= category.is_route %></td>
         <td><%= category.description %></td>
-        <td><%=l category.created_at %></td>
+        <td><%= category.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_category_path(category), :class => 'btn btn-mini' %>
