--- a/app/views/supercategories/index.html.erb
+++ b/app/views/supercategories/index.html.erb
@@ -26,7 +26,7 @@
         <td><%= supercategory.icon_content_type %></td>
         <td><%= supercategory.icon_file_size %></td>
         <td><%= supercategory.icon_update_at %></td>
-        <td><%=l supercategory.created_at %></td>
+        <td><%= supercategory.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_supercategory_path(supercategory), :class => 'btn btn-mini' %>
