Added support for friends and method in user to look for foursquare, facebook and twitter friends. Improved authentications login with user profile creation and some data added with authentication

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -42,12 +42,12 @@
 
 <p>
   <b>Married:</b>
-  <%= @profile.married %>
+  <%= @profile.is_married %>
 </p>
 
 <p>
   <b>Soons:</b>
-  <%= @profile.soons %>
+  <%= @profile.has_sons %>
 </p>
 
 <p>
