--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -28,8 +28,8 @@
     <td><%= profile.about_me %></td>
     <td><%= profile.i_like %></td>
     <td><%= profile.i_dont_like %></td>
-    <td><%= profile.married %></td>
-    <td><%= profile.soons %></td>
+    <td><%= profile.is_married %></td>
+    <td><%= profile.has_sons %></td>
     <td><%= profile.restrictions %></td>
     <td><%= link_to 'Show', profile %></td>
     <td><%= link_to 'Edit', edit_profile_path(profile) %></td>
