--- a/app/assets/stylesheets/pois.css
+++ b/app/assets/stylesheets/pois.css
@@ -119,12 +119,12 @@ ul.places-list.condensed.reduced li.poi-preview .poi-desc {
 
 #poi-detail h1 {
   font-size: 30px;
-  color: #4FA800;
+  color: #004FA8;
 }
 
 #poi-detail h3.section-title {
   font-size: 16px;
-  color: #F24F00;
+  color: #3366FF;
 }
 
 #poi-detail .poi-info {
