--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%# render 'layouts/stylesheet' %>
   	<%= javascript_include_tag "application" %>
   	<%# javascript_include_tag "http://maps.googleapis.com/maps/api/js?key=AIzaSyDpQyPKnWwpJLOZJCzZocuO9RoetHBk70Q&sensor=false" %>
+  	<%= javascript_include_tag "http://maps.googleapis.com/maps/api/js?sensor=false" %>
     <%= csrf_meta_tags %>  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -33,8 +34,7 @@
 		  				<%= link_to logo, root_path %></li>
               <li><a href="/">Home</a></li>
               <li><a href="/pages/about">About</a></li>
-              <li><a href="/pages/contact">Contact</a></li>
-              <li><a href="/pages/help">Help</a></li>
+              
               <% if user_signed_in? %>
               	<li><%=link_to "Authentications", authentications_path%></li>
               <% end %>            
@@ -47,9 +47,9 @@
 		        </div>
 		        	
 		        	<% if user_signed_in? %>
-		        	<div class="pull-right">
-		        		Logged as
-		          	<%= link_to "#{current_user.name}", current_user %>&nbsp;&nbsp;&nbsp;&nbsp;
+		        	<div class="pull-right">		        		
+		          	Logged as <%= link_to "#{current_user.name}", current_user %>&nbsp; 
+		          	<%= link_to "Sign Out", destroy_user_session_path %>&nbsp;&nbsp;		          	
 		          </div>
 		          <% else %>
 		          
